mise en place de route via angular

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header>
+  <h1>Myrooter APP</h1>
+
+  <nav>
+    <ul>
+      <li><a routerLink="/homepage">homepage</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/about">about</a></li>
+    </ul>
+  </nav>
+</header>
